Fix tooltips not showing anymore

--- a/app/assets/stylesheets/simplebattlewindow.less
+++ b/app/assets/stylesheets/simplebattlewindow.less
@@ -36,6 +36,7 @@
   width: 100vw;
   height: 100vh;
   opacity: 0;
+  display: none;
   z-index: 50;
 
   &.rain {background-color: darkblue}
